added new snake structure snake now moves in different directions