@@ -1,17 +1,15 @@
 package bin;
 
-import javafx.scene.Node;
 import javafx.scene.layout.Pane;
 import javafx.scene.paint.Color;
 
-import java.util.*;
 
 
 public class Snake{
     private Pane pane;
     private int size = 4;
-    private List<SquareDOT> body = new LinkedList<>();
-    private SquareDOT head = new SquareDOT();
+    private SnakeList body;
+    private SquareDOT head;
     private int step = 11;
     private int horizontal = 0;
     private int vertical = -step;
@@ -21,33 +19,34 @@ public class Snake{
     }
 
     Snake(Pane pane){
+        body = new SnakeList(size);
+        head = body.getHead();
         head.setFill(Color.web("#d44a0e"));
-        body.add(head);
-        for (int i = 1; i <size ; i++) {
+        for (int i = 2; i <size ; i++) {
             body.add(new SquareDOT());
         }
         this.pane = pane;
     }
 
     public void show(){
-        int i=0;
-        for (SquareDOT dot :
-             body) {
+        SquareDOT dot = body.getHead();
+        for(int i = 0; i < body.size(); i++){
             dot.setX(220);
             dot.setY(220+i*dot.getHeight());
             pane.getChildren().addAll(dot);
-            i++;
+            if(dot.hasNext()) dot = dot.getNext();
         }
     }
 
     public void move(){
-        SquareDOT temp = body.get(body.size()-1);
-        body.get(body.size()-1).setX(head.getX());
-        body.get(body.size()-1).setY(head.getY());
-        body.remove(body.size()-1);
-        body.add(1,temp);
+        body.getLast().setX(head.getX());
+        body.getLast().setY(head.getY());
+        body.add_second(body.getLast());
+        body.getLast().getPrevious().setNext(null);
+        body.setLast(body.getLast().getPrevious());
         head.setX(head.getX()+horizontal);
         head.setY(head.getY()+vertical);
+        head.toFront();
     }
 
     public void up(){
